--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
     height: 100%;
     width: auto;
-    
+    color: white;
 }
 
 body {
@@ -10,9 +10,42 @@ body {
     background-size:cover;
 }
 
-.main {
+#main {
     width: 50%;
-    height: 30%;
-    margin: auto;
-    margin-left: 50%;
+    height: 50%;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 50%;
+    text-align: center;
+    border-radius: 20px;
+    backdrop-filter: blur(30px);
+    box-shadow: 0px 0px 30px rgba(227,228,237,0.37);
+    border: 2px solid rgba(255,255,255,0.18);
+    align-content: center;
+}
+
+#link {
+    height:50px;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 45px;
+    transition: all 0.5s;
+    backdrop-filter: blur(30px);
+    box-shadow: 0px 0px 30px rgba(227,228,237,0.37);
+    border: 2px solid rgba(255,255,255,0.18);
+}
+
+#link:hover {
+    border-radius: 45px;
+    transform: scale(1.1);
+}
+
+img {
+    height:20%;
+    width: 20%;
+    border-radius: 90px;
+    margin-top: 20px;
 }
