add icons & fix sizing

--- a/style.css
+++ b/style.css
@@ -36,7 +36,13 @@ body {
     backdrop-filter: blur(30px);
     box-shadow: 0px 0px 30px rgba(227,228,237,0.37);
     border: 2px solid rgba(255,255,255,0.18);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+
 
 #link:hover {
     border-radius: 45px;
