--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html {
+html,body {
     height: 100%;
     width: auto;
     color: white;
@@ -59,4 +59,9 @@ img {
 a {
     text-decoration: none;
     color: white;
+}
+
+
+footer {
+    margin-bottom: 0;
 }
