--- a/style.css
+++ b/style.css
@@ -45,9 +45,10 @@ body {
 }
 
 a {
-    height: 100%;
+    height: 50px;
     width: 100%;
-
+    text-decoration: none;
+    color: white;
 }
 
 
@@ -64,12 +65,10 @@ img {
     margin-top: 20px;
 }
 
-a {
-    text-decoration: none;
-    color: white;
-}
+
 
 
 footer {
     margin-bottom: 0;
+    text-align: right;
 }
