--- a/style.css
+++ b/style.css
@@ -49,6 +49,9 @@ a {
     width: 100%;
     text-decoration: none;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
