--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-    background-image:url(Macos\ Mojave\ Includes\ Two\ Desert\ Themed\ Wallpaper\ Here.jpg);
+    background-color: black;
     background-repeat: repeat-y;
     background-size:cover;
 }
