--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ img {
     transform: scale(1.1);
 }
 
-#AboutMe, #Setup, #Apps {
+#AboutMe, #Setup, #Apps, #Media, #Gallery {
     width: 60%;
     margin-right: auto;
     margin-left: auto;
