--- a/style.css
+++ b/style.css
@@ -106,6 +106,12 @@ img {
     transform: scale(1.1);
 }
 
+.galleryimg {
+    width: 300px;
+    height: 400px;
+    border-radius: 0px;
+}
+
 #AboutMe, #Setup, #Apps, #Media, #Gallery {
     width: 60%;
     margin-right: auto;
