--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ img {
     
 }
 
-#AboutMe, #Setup, #Apps, #Media, #Gallery {
+#AboutMe, #Setup, #Apps, #Media, #Gallery, #TodaysTrack {
     width: 60%;
     margin-right: auto;
     margin-left: auto;
